# Create-model-from-2d-point-cloud

./: CMakeLists.txt  Point_cloud.cpp  Point_cloud.h  README.md  convex_hull.cpp  create_point.cpp
data/: points.txt
